--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ mail.sender_name = Flatmate
 
 spring.mail.properties.mail.stmp.starttls.enable= true
 spring.mail.properties.mail.stmp.starttls.required= true
+
+firebase.service-account=src/main/resources/flatmate-firebase-service-account.json
+firebase.storage.bucket=flatmate-ead9e.appspot.com
+
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
