--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jackson.parser.allow-unquoted-control-chars=true
 server.error.include-message=always
+server.error.include-exception=true
 spring.datasource.url=jdbc:mysql://localHost:3306/flatmate?allowPublicKeyRetrieval=true&useSSL=false&Unicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
@@ -9,7 +10,6 @@ server.servlet.encoding.force=true
 
 server.port=8080
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
