--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+
 spring.jackson.parser.allow-unquoted-control-chars=true
 server.error.include-message=always
 server.error.include-exception=true
-spring.datasource.url=jdbc:mysql://localHost:3306/flatmate?allowPublicKeyRetrieval=true&useSSL=false&Unicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -22,15 +24,15 @@ jwt.refreshtoken.expiration=86400
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = kweaung5441@gmail.com
-spring.mail.password= gfnmyrlherctqfch
+spring.mail.username =${MAIL_USERNAME}
+spring.mail.password=${MAIL_APP_PASSWORD}
 mail.sender_name = Flatmate
 
 spring.mail.properties.mail.stmp.starttls.enable= true
 spring.mail.properties.mail.stmp.starttls.required= true
 
 firebase.service-account=src/main/resources/flatmate-firebase-service-account.json
-firebase.storage.bucket=flatmate-ead9e.appspot.com
+firebase.storage.bucket=${FIREBASE_STOAGE_BUCKET}
 
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
