--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,15 @@
 			<version>1.10.0</version>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-imaging</artifactId>
+			<version>1.0-alpha3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
