add (WebSocket): webSocketHandler and WebSocketConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.error.include-message=always
 server.error.include-exception=true
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=@Nexcode123
 
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
