--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,13 @@
 			<artifactId>reactor-netty</artifactId>
 		</dependency>
 
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.security/spring-security-messaging -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-messaging</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
