refactor: refactor mail sender and some other codes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+management.endpoints.web.exposure.include=metrics
+
 
 spring.jackson.parser.allow-unquoted-control-chars=true
 server.error.include-message=always
