--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 management.endpoints.web.exposure.include=metrics
+spring.output.ansi.enabled=always
 
 
 spring.jackson.parser.allow-unquoted-control-chars=true
 server.error.include-message=always
 server.error.include-exception=true
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=root
-spring.datasource.password=@Nexcode123
+#spring.datasource.url=jdbc:mysql://localhost:3306/flatmate?allowPublicKeyRetrieval=true&useSSL=false&Unicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=@Nexcode123
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/flatmate?allowPublicKeyRetrieval=true&useSSL=false&Unicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:abcd1234}
+spring.sql.init.mode=always
 
 server.servlet.encoding.charset=utf-8
 server.servlet.encoding.force=true
@@ -26,15 +30,15 @@ jwt.refreshtoken.expiration=86400
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username =${MAIL_USERNAME}
-spring.mail.password=${MAIL_APP_PASSWORD}
+spring.mail.username =gemini.oakkar@gmail.com
+spring.mail.password=qkbf bfsd akse pmxm
 mail.sender_name = Flatmate
 
 spring.mail.properties.mail.stmp.starttls.enable= true
 spring.mail.properties.mail.stmp.starttls.required= true
 
 firebase.service-account=src/main/resources/flatmate-firebase-service-account.json
-firebase.storage.bucket=${FIREBASE_STOAGE_BUCKET}
+firebase.storage.bucket=gs://flatmate-ead9e.appspot.com
 
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
