--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.mail.properties.mail.stmp.starttls.enable= true
 spring.mail.properties.mail.stmp.starttls.required= true
 
 firebase.service-account=src/main/resources/flatmate-firebase-service-account.json
-firebase.storage.bucket=gs://flatmate-ead9e.appspot.com
+firebase.storage.bucket=
 
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=300MB
